Removing extra files

--- a/lightbox.html
+++ b/lightbox.html
@@ -29,24 +29,28 @@
             </div>
             <input type="hidden" value="" name='toVal'>
             <input type="hidden" value="" name='currVal'>            
-        </div>        
-            <select id="progressbar-select" class="selectmenu">
-                <option value="progress1">#progress1</option> 
-                <option value="progress2">#progress2</option> 
-                <option value="progress3">#progress3</option> 
-            </select>
-        <div id="plus25" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false">
-            <span class="btn-text">+25</span>
-        </div>            
-        <div id="minus25" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false">
-            <span class="btn-text">-25</span>
+        </div>  
+        <div class="row-8 clearfix">
+            <div class="col-1-2">      
+                <select id="progressbar-select" class="selectmenu">
+                    <option value="progress1">#progress1</option> 
+                    <option value="progress2">#progress2</option> 
+                    <option value="progress3">#progress3</option> 
+                </select>
+            </div>
+            <div id="plus25" class="col-1-8 ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false">
+                <span class="btn-text">+25</span>
+            </div>            
+            <div id="minus25" class="col-1-8 ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false">
+                <span class="btn-text">-25</span>
+            </div>
+            <div id="plus10" class="col-1-8 ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false">
+                <span class="btn-text">+10</span>
+            </div>
+            <div id="minus10" class="col-1-8 ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false">
+                <span class="btn-text">-10</span>
+            </div>                
         </div>
-        <div id="plus10" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false">
-            <span class="btn-text">+10</span>
-        </div>
-        <div id="minus10" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false">
-            <span class="btn-text">-10</span>
-        </div>                
     </div>    
 </body>
 
